# knowledge-rag-agent-platform

./: .env.example  .gitignore  Dockerfile  FINAL_VIDEO_RAG_REPORT.md  MULTIMODAL_VIDEO_UPDATE.md  Makefile  README.md  VIDEO_RAG_COMPLETION_REPORT.md  VIDEO_RAPTOR_DUAL_STRATEGY_UPDATE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/benchmarks/: target_report.json
artifacts/models/: .gitignore  README.md
benchmarks/: README.md  corpus.jsonl  eval.jsonl  sample_eval.jsonl
datasets/: README.md  intent_train.jsonl  rewrite_train.jsonl
docs/: ARCHITECTURE.md  CAPABILITIES.md  DEPLOYMENT.md  MULTIMODAL_VIDEO_RAG.md  VIDEO_RAG_IMPLEMENTATION_SUMMARY.md  VIDEO_RAG_OVERVIEW.md  VIDEO_RAPTOR.md  VIDEO_RAPTOR_STRATEGIES.md  VIDEO_SUMMARY.md  VIDEO_TRACEABILITY.md
examples/: multimodal_video_example.py  offline_flow.py  video_raptor_example.py  video_summary_example.py  video_traceability_demo.py
frontend/: .env.example  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
java-gateway/: Dockerfile  pom.xml
legacy/frontend-material/: MaterialChat.vue  MaterialDetail.vue  MaterialUpload.vue  OrderList.vue  index.js  materialService.js  (+1 more)
scripts/: compare_retrieval_ab.py  reproduce_target_metrics.py  run_rag_benchmark.py  serve_vllm.sh  train_qwen_qlora.py  validate_target_metrics.py
tests/: conftest.py  test_agentic.py  test_core_components.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_memory.py  test_raptor.py  test_retrieval.py  test_routing.py
(+464 files in other folders)
